<resources>
    <string name="app_name">StarsUp</string>

    <!-- Strings de Connexion -->
    <string name="titre_activity_connexion">Connexion</string>
    <string name="champ_requis">Ce champ est requis</string>
    <string name="login">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="login_erreur">L\'identifiant est incorrect</string>
    <string name="password_erreur">Le mot de passe est incorrect</string>
    <string name="connexion">Connexion</string>
    <string name="action_settings">Parametres</string>
    <string name="chargement_connexion">Connexion en cours. Attendez ...</string>

    <string name="titre_activity_planning">Planning</string>
    <string name="chargement_visites">Chargement des visites. Attendez ...</string>

    <!-- Strings de Hebergement -->
    <string name="titre_activity_hebergement">Hébergement</string>
    <string name="nom">Nom</string>
    <string name="web">Site Web</string>
    <string name="horaires">Horaires</string>
    <string name="adresse">Adresse</string>
    <string name="note">Note</string>
    <string name="commentaire">Commentaire</string>
    <string name="envoyer">Envoyer</string>
    <string name="chargement_update">Update en cours. Attendez ...</string>
    <string name="update_fini">Update effectuée</string>
    <string name="deconnexion">Deconnexion</string>

</resources>
