<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnexionActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:background="@drawable/background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/lb_login"
            android:layout_gravity="center_horizontal"
            android:textIsSelectable="false"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txt_Login"
            android:layout_gravity="center_horizontal"
            android:hint="@string/login"
            android:text="KMenant"
            android:layout_marginBottom="20dp"
            android:inputType="textPersonName"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/lb_mdp"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txt_MDP"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:text="azerty1234"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connexion"
            android:id="@+id/btn_login"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp" />
    </LinearLayout>
</RelativeLayout>
